improve invalid character check on loading don't use the ConvertInvalidToNull variant + check for null chars but check the invalidChars field of the decoder state allows to load files with 0 bytes

BUG: 406571